2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  src/mcs51/gen.h,
	  src/stm8/gen.c,
	  src/z80/gen.c:
	  Handle return values via aopRet.

2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.h,
	  src/mcs51/gen.c:
	  mcs51 code generation refactoring.

2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.h,
	  src/z80/gen.c:
	  Burn AOP_STR.

2023-11-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c:
	  Make aopGet use asmop * instead of operand *.

2023-11-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c:
	  Fix opIsGptr, so it works even when the op has no aop yet.

2023-11-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  src/mcs51/gen.h,
	  src/mcs51/main.c,
	  src/mcs51/ralloc.c,
	  src/SDCCglue.c:
	  mcs51 code generation refactoring.

2023-11-11 Felix Salfelder <felix AT salfelder.org>

	* Makefile.in:
	  Fix Ticket #193

2023-11-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* .version,
	  doc/sdccman.lyx,
	  src/mcs51/gen.c,
	  src/mcs51/main.c:
	  Remove --parms-in-bank1 support in mcs51 port.

2023-11-00 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/cc1_dummies.cc:
	  Rectify dummy prototype. Fixes bug #3654.

2023-11-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCmain.c:
	  Fix --std-c2x.
	* src/SDCCralloc.hpp:
	  Fix an UB issue in register allocation affecting z80 (and related).
	* src/mcs51/ralloc.h,
	  src/mcs51/ralloc.c:
	  Destroy the xreg relics.

2023-11-08 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/diagnostic-color.cc,
	  support/cpp/gcc/prefix.cc:
	  attempt to fix bug #3669, cf
	  https://gcc.gnu.org/pipermail/gcc-patches/2023-January/609526.html

2023-11-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* .version,
	  device/lib/Makefile.in,
	  device/lib/ckd_add.c,
	  device/lib/ckd_mul.c,
	  device/lib/ckd_sub.c,
	  device/lib/*/Makefile.in,