@@ -1,5 +1,10 @@
 2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/mcs51/gen.c:
+	  Basic aopArg for mcs51.
+
+2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/mcs51/gen.c,
 	  src/mcs51/gen.h,
 	  src/stm8/gen.c,
